k8s/infra/auth/keycloak/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-http
  namespace: keycloak
spec:
  parentRefs:
    - name: insecure
      namespace: gateway
  hostnames:
    - "auth.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /admin
      backendRefs:
        - name: keycloak
          port: 80
