k8s/infra/auth/keycloak/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-https
  namespace: keycloak
spec:
  parentRefs:
    - name: internal-production
      namespace: gateway
  hostnames:
    - "auth.emisia.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /admin
        - path:
            type: PathPrefix
            value: /realms
      backendRefs:
        - name: keycloak
          port: 80
